Update grid to be centered with 3 columns

--- a/src/index.css
+++ b/src/index.css
@@ -16,8 +16,10 @@ code {
   list-style-type: none;
   display: grid;
   grid-gap: 50px 100px;
-  grid-template-columns: auto auto auto auto;
-  padding-right: 40px;
+  grid-template-columns: 25% 25% 25%;
+  padding: 50px;
+  align-content: center;
+  justify-content: center;
 }
 
 .member-image {
@@ -36,10 +38,13 @@ code {
 .member-view-info {
   display: flex;
   flex-direction: column;
-  min-width: 160px;
   margin: 10px;
 }
 
 .member-name {
   font-weight: bold;
+}
+
+ul {
+  padding-inline-start: 0px;
 }
