--- a/src/index.css
+++ b/src/index.css
@@ -23,10 +23,11 @@ code {
 }
 
 .member-image {
-  max-width: 150px;
+  max-height: 180px;
 }
 
 .member-view {
+  min-height: 180px;
   display: flex;
   align-items: flex-start;
   background: #c3c3c3;
