--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,11 @@ code {
   box-shadow: 10px 10px 10px #80808030;
 }
 
+.member-list li:hover {
+  box-shadow: 10px 10px 10px #56a4ce80;
+  transition: all 0.2s ease-in-out;
+}
+
 .member-view-info {
   display: flex;
   flex-direction: column;
@@ -48,4 +53,31 @@ code {
 
 ul {
   padding-inline-start: 0px;
+}
+
+.page-control {
+  display: flex;
+  justify-content: center;
+  /* align-items: center; */
+}
+
+button {
+  width: 50px;
+  height: 50px;
+  font: 30px system-ui;
+  margin: 15px;
+  background: none;
+  border: none;
+  color: #a2a2a2ba;
+  cursor: pointer;
+}
+
+button:hover {
+  color: #0059ffba;
+  font: 40px system-ui;
+  transition: all 0.2s ease-in-out;
+}
+
+button:focus {
+  outline: none;
 }
