--- a/src/index.css
+++ b/src/index.css
@@ -19,8 +19,9 @@ code {
   grid-template-columns: 25% 25% 25%;
   padding: 50px;
   padding-top: 0px;
-  align-content: center;
+  align-content: flex-start;
   justify-content: center;
+  min-height: 640px;
 }
 
 .member-image {
